--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 h1 {
     color: black;
     text-align: center;
-    font-family: 'Abril Fatface', cursive;
+    font-family: 'Bree Serif', serif;
     font-weight: bold;
     font: outline;
 }
